mapper actualizado